# Master-2

./: README.md
PRAT/YOLO_code/: data_resize.yaml  data_resolution.yaml  resize.ipynb  resolution.ipynb  yolo_resize.ipynb  yolo_resolution.ipynb
RDFIR/TP1/: 1-e.ipynb
RDFIR/TP2/: 2_a-Yuxuan-Mojan.ipynb  2_c-Yuxuan-Mojan.ipynb
RDFIR/TP3/: 3a_Yuxuan_Mojan.ipynb  3b_Yuxuan_Mojan.ipynb  3c_Yuxuan_Mojan.ipynb
TADI/: TP2_MRF_Yuxuan_XI.ipynb
TADI/TP-morpho/: tp_morpho.py
Vision/Fundamental_Initial/: CMakeLists.txt  Fundamental.cpp
Vision/GCDisparity_Initial/: CMakeLists.txt  GCDisparity.cpp  exampleGC.cpp
Vision/Panorama_Initial/: CMakeLists.txt  Panorama.cpp  README.txt
Vision/Seeds_Initial/: CMakeLists.txt  Seeds.cpp
Vision/TP-visage/: 未命名1.ipynb
Vision/object_tracking/: ObjectTracking.ipynb
